# flutter_ffi_takehome

./: README.md
C/: BUILD.md  CMakeLists.txt  build.sh
C/include/: ditto.h
C/linux/: README.md
C/macos/: README.md  libdittoffi.dylib
C/src/: ditto.c
C/windows/: README.md
app/flutter/: pubspec.yaml
app/flutter/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
